add images and fix card sizes

--- a/index-cards.html
+++ b/index-cards.html
@@ -19,6 +19,11 @@
         </header>
         <div class="section-container">
                 <div class="carousel-container">
+                    <div class="carousel-wrapper">
+                        <button class="carousel-btn left">&#10094;</button> <!-- Left Arrow -->
+                        <div class="carousel"> <!-- Existing Carousel --> </div>
+                        <button class="carousel-btn right">&#10095;</button> <!-- Right Arrow -->
+                    </div>
                     <div class="carousel">
                         <!-- Cards will be dynamically inserted here by JavaScrip -->
                             <!-- <div class="card">
