--- a/index-cards.html
+++ b/index-cards.html
@@ -45,8 +45,8 @@
                 </div>
         </div>
         <div class="modal">
+            <button type="button" class="btn-close" aria-label="Close">&times;</button>
             <div class="modal-content">
-                <span class="close-modal">&times;</span>
                 <!-- Modal content will be injected here by JavaScript -->
             </div>
         </div>
