edit size and media queries

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h1 >The Brilliant Spotlight</h1>
             </a>
         </header>
-        <section>
+        <section class="home-hero">
             <div class="content-container">
                 <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="David's picture'" width="100%" height="auto"></a>
                 <h2>Shining a Light on Your Local Business</h2>
