--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
             <div class="content-container">
                 <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="David's picture'" width="100%" height="auto"></a>
                 <h2>Shining a Light on Your Local Business</h2>
+                <div class="current-campaign">
+                    <a class="site-button campaign" href="index-cards.html">Current Campaign</a>
+                </div>
                 <p>
-                    At The Brilliant Spotlight, we believe every local business deserves a chance to shine. As a proud small business ourselves, we specialize in creating customized websites tailored to your unique needs, helping you establish a professional online presence.
-
-                    In addition to web design, we offer high-quality printing services and utilize EDDM (Every Door Direct Mail) to bring your message directly to the community. By combining modern tools with traditional outreach, we provide an affordable alternative to costly marketing campaigns.
+                    At The Brilliant Spotlight, we believe every local business deserves a chance to shine. As a proud small business ourselves, we specialize in high-quality printing services and utilize EDDM (Every Door Direct Mail) to bring your message directly to the community. By combining modern tools with traditional outreach, we provide an affordable alternative to costly marketing campaigns.
                 </p>
             </div>
-        </section>        
+        </section>       
         <footer>
                 <p>&copy; 2024  All rights reserved.</p>
         </footer> 
