--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="The Brilliant Spotlight" />
+    <meta property="og:description" content="The Brilliant Spotlight offers affordable EDDM marketing—design, print, and delivery to targeted local audiences. Stand out and grow your business!" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/OcamposTreeandFence/refs/heads/main/images/o.jpg" />
+    <meta property="og:image:alt" content="The Brilliant Spotlight" />
+    <link rel="icon" href="images/spotlightLogoBlack.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/spotlightLogoBlack.png">
     <title>The Brilliant Spotlight</title>
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Add any additional meta tags or link to external stylesheets here -->
     <script src="script.js" defer></script>
 </head>
 
