add og descr and img to pages

--- a/index-cards.html
+++ b/index-cards.html
@@ -3,11 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Cards</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="The Brilliant Spotlight" />
+    <meta property="og:description" content="Boost your local reach with Every Door Direct Mail! Affordable, targeted print ads designed to put your business in the spotlight and drive results" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_image_YELLOW.png" />
+    <meta property="og:image:alt" content="The Brilliant Spotlight" />
+    <link rel="icon" href="images/spotlightLogoBlack.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="images/spotlightLogoBlack.png">
+    <title>The Brilliant Spotlight</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <!-- Add any additional meta tags or link to external stylesheets here -->
 </head>
 
 <body>
