--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta property="og:title" content="The Brilliant Spotlight" />
     <meta property="og:description" content="The Brilliant Spotlight offers affordable EDDM marketing—design, print, and delivery to targeted local audiences. Stand out and grow your business!" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/projects/the_brilliant_spotlight_OG_image.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_Image_canvaSurprise.png" />
     <meta property="og:image:alt" content="The Brilliant Spotlight" />
     <link rel="icon" href="images/spotlightLogoBlack.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/spotlightLogoBlack.png">
