add backgrouund img to campaign page

--- a/index-cards.html
+++ b/index-cards.html
@@ -17,6 +17,7 @@
 
 <body>
     <div class="main-container cards-bg">
+        <div class="background-image"></div>
         <header>
             <a class="main-title" href="index.html">
                 <h1>The Brilliant Spotlight</h1>
