--- a/contact-form.html
+++ b/contact-form.html
@@ -27,7 +27,7 @@
                 <h1>The Brilliant Spotlight</h1>
             </a>
         </header>
-        <div class="section-container">
+        <div class="section-container form">
             <div class="contact-section">
                 <h2>Contact Us</h2>
                 <form action="#" method="POST">
