hide current campaign button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
                 <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="logo image" width="100%" height="auto"></a>
                 <h2>Shining a Light on Your Local Business</h2>
                 <div class="current-campaign create">
-                    <a class="site-button campaign" href="contact-form.html">Create a Campaign</a>
-                <!-- </div>
-                <div class="current-campaign"> -->
-                    <a class="site-button top-mar-small" href="index-cards.html">Current Campaign</a>
+                    <a class="site-button" href="contact-form.html">Create a Campaign</a>
+                    <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
                 </div>
                 
                 <p>
@@ -42,7 +40,7 @@
             </div>
         </section>       
         <footer>
-                <p>&copy; 2024  All rights reserved.</p>
+                <p>&copy; 2025  All rights reserved.</p>
         </footer> 
     </div>
 </body>
