add google contact and file upload forms

--- a/contact-form.html
+++ b/contact-form.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-    <div class="main-container cards-bg">
-        <div class="background-image"></div>
+    <div class="main-container contact">
+        <!-- <div class="background-image"></div> -->
         <header class="main-title">
             <a href="index.html">
                 <h1>The Brilliant Spotlight</h1>
@@ -30,19 +30,17 @@
         <div class="section-container form">
             <div class="contact-section">
                 <h2>Contact Us</h2>
-                <form action="#" method="POST">
-                    <input type="text" name="name" autocomplete="off" placeholder="Your Name" required>
-                    <input type="email" name="email" autocomplete="off" placeholder="Your Email" required>
-                    <textarea name="message" placeholder="Your Message" required></textarea>
-                    <button type="submit" class="site-button">Send</button>
-                </form>
-                <div class="social-links">
-                    <a href="https://www.facebook.com/profile.php?id=61572468187655" target="_blank" rel="noopener noreferrer" class="social-link facebook">
-                        <i class="fab fa-facebook"></i> Follow us on Facebook
-                    </a>
-                </div>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiKHcPzvItVd_3sXz8ITZhOVJTC4IQbxb_WhEElV-2HutK7w/viewform?embedded=true" width="640" height="1644" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
             </div>
-            
+            <div class="social-links">
+                <div class="upload-link">
+                    <p>Have files to share? <a href="https://docs.google.com/forms/d/e/1FAIpQLScB0PnSmiqOjuJk9XS45fFlxSrKJ5rGIi6PgTPTQLu8zUtUcg/viewform?usp=dialog" target="_blank">Upload them here</a>.</p>
+                </div>
+                <a href="https://www.facebook.com/profile.php?id=61572468187655" target="_blank" rel="noopener noreferrer" class="social-link facebook">
+                    <i class="fab fa-facebook"></i> Follow us on Facebook
+                </a>
+            </div>
         </div>
         <footer>
                 <p>&copy; 2025  All rights reserved.</p>
