edit contact form  margins

--- a/contact-form.html
+++ b/contact-form.html
@@ -29,7 +29,7 @@
         </header>
         <div class="section-container form">
             <div class="contact-section">
-                <h2>Contact Us</h2>
+                <h2>CONTACT US</h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiKHcPzvItVd_3sXz8ITZhOVJTC4IQbxb_WhEElV-2HutK7w/viewform?embedded=true" width="640" height="1644" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
             </div>
