--- a/index-cards.html
+++ b/index-cards.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="The Brilliant Spotlight" />
     <meta property="og:description" content="Boost your local reach with Every Door Direct Mail! Affordable, targeted print ads designed to put your business in the spotlight and drive results" />
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_image_YELLOW.png" />
-    <meta property="og:image:alt" content="The Brilliant Spotlight" />
+    <meta property="og:image:alt" content="The Brilliant Spotlight - Discover Trusted Local Businesses" />
     <link rel="icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png">
     <title>The Brilliant Spotlight</title>
