add bg img to index and change og page title

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
         </header>
         <section class="home-hero">
             <div class="content-container">
-                <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="logo image" width="100%" height="auto"></a>
+                <div class="city-bg-image">
+                    <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="logo image" width="100%" height="auto"></a>
+                </div>
                 <h2>Shining a Light on Your Local Business</h2>
                 <div class="current-campaign create">
-                    <a class="site-button" href="contact-form.html">Create a Campaign</a>
+                    <a class="site-button" href="contact-form.html">Start a Campaign</a>
                     <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
                 </div>
                 
                 <p>
-                    At The Brilliant Spotlight, we believe every local business deserves a chance to shine. As a proud small business ourselves, we specialize in high-quality printing services and utilize EDDM (Every Door Direct Mail) to bring your message directly to the community. By combining modern tools with traditional outreach, we provide an affordable alternative to costly marketing campaigns.
+                    Every local business deserves a chance to shine. As a proud small business ourselves, we specialize in high-quality printing services and utilize EDDM (Every Door Direct Mail) to bring your message directly to the community. By combining modern tools with traditional outreach, we provide an affordable alternative to costly marketing campaigns.
                 </p>
             </div>
         </section>       
