--- a/index-cards.html
+++ b/index-cards.html
@@ -10,7 +10,7 @@
     <meta property="og:image:alt" content="The Brilliant Spotlight - Discover Trusted Local Businesses" />
     <link rel="icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png">
-    <title>The Brilliant Spotlight</title>
+    <title>The Brilliant Local Business Spotlight</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
