change og title

--- a/index-cards.html
+++ b/index-cards.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="Deals & Quality in the Spotlight" />
+    <meta property="og:title" content="Deals & Quality Service in the Spotlight" />
     <meta property="og:description" content="Boost your local reach with Every Door Direct Mail! Affordable, targeted print ads designed to put your business in the spotlight and drive results" />
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/og_CHECK%20OUT%20THIS.png" />
     <meta property="og:image:alt" content="The Brilliant Spotlight - Discover Trusted Local Businesses" />
