edit og img, p text, profile color

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 </div>
                 <h2>Shining a Light on Your Local Business</h2>
                 <div class="current-campaign create">
-                    <a class="site-button" href="contact-form.html">Start a Campaign</a>
+                    <a class="site-button" href="contact-form.html">Start your Campaign Now</a>
                     <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
                 </div>
                 
                 <p>
-                    Every local business deserves a chance to shine. As a proud small business ourselves, we specialize in high-quality printing services and utilize EDDM (Every Door Direct Mail) to bring your message directly to the community. By combining modern tools with traditional outreach, we provide an affordable alternative to costly marketing campaigns.
+                    We believe every local business deserves to shine. As a proud small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!
                 </p>
             </div>
         </section>       
