--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_Image_canvaSurprise.png" />
     <meta property="og:image:alt" content="The Brilliant Spotlight" />
     <link rel="icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_32x32.png" sizes="32x32" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_76x76.png" sizes="76x76" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_144x144.png" sizes="144x144" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_228x228.png" sizes="228x228" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png">
     <title>The Brilliant Spotlight</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +41,7 @@
                 </div>
                 
                 <p>
-                    We believe every local business deserves to shine. As a proud small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!
+                    We believe every local business deserves to shine. As a small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!We believe every local business deserves to shine. As a small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!We believe every local business deserves to shine. As a small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!
                 </p>
             </div>
         </section>       
