--- a/index-cards.html
+++ b/index-cards.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta property="og:title" content="Deals & Quality Service in the Spotlight" />
     <meta property="og:description" content="Boost your local reach with Every Door Direct Mail! Affordable, targeted print ads designed to put your business in the spotlight and drive results" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/og_CHECK%20OUT%20THIS.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/og_CHECK%20OUT%20THIS_yellow.png" />
     <meta property="og:image:alt" content="The Brilliant Spotlight - Discover Trusted Local Businesses" />
     <link rel="icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_32x32.png" sizes="32x32" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_76x76.png" sizes="76x76" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_144x144.png" sizes="144x144" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon_228x228.png" sizes="228x228" type="image/x-icon">
     <link rel="apple-touch-icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png">
     <title>The Brilliant Spotlight</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,22 +38,6 @@
                         <button class="carousel-btn right">&#10095;</button> <!-- Right Arrow -->
                     </div>
                     <div class="carousel">
-                        <!-- Cards will be dynamically inserted here by JavaScrip -->
-                            <!-- <div class="card">
-                                <img src="images/projects/watershed_card.jpg" alt="bussiness image'">
-                                <div class="card-content">
-                                    <div class="business-name">
-                                        <h2>Watershed
-
-                                        </h2>
-                                    </div>
-                                    <a class="site-button" href="#">Visit Website</a>
-                                    <p>
-                                        At The Brilliant Spotlight, we believe every local business deserves a chance to shine. As a proud small business ourselves, we specialize in creating customized websites tailored to your unique needs, helping you establish a professional online presence.
-
-                                    </p>
-                                </div>
-                            </div> -->
                     </div>
                 </div>
         </div>
