--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="The Brilliant Spotlight" />
-    <meta property="og:description" content="The Brilliant Spotlight offers affordable EDDM marketing—design, print, and delivery to targeted local audiences. Stand out and grow your business!" />
+    <meta property="og:title" content="Shine with The Brilliant Spotlight" />
+    <meta property="og:description" content="Trust The Brilliant Spotlight for affordable EDDM—design, print, and deliver to your local area. Stand out today!" />
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_Image_canvaSurprise.png" />
     <meta property="og:image:alt" content="The Brilliant Spotlight" />
     <link rel="icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png" type="image/x-icon">
@@ -34,14 +34,15 @@
                 <div class="city-bg-image">
                     <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="logo image" width="100%" height="auto"></a>
                 </div>
+                <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
                 <h2>Shining a Light on Your Local Business</h2>
                 <div class="current-campaign create">
-                    <a class="site-button" href="contact-form.html">Start your Campaign Now</a>
+                    <a class="site-button" href="contact-form.html">Start your Campaign </a>
                     <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
                 </div>
                 
                 <p>
-                    We believe every local business deserves to shine. As a small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!We believe every local business deserves to shine. As a small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!We believe every local business deserves to shine. As a small business ourselves, we specialize in high-quality printing services and EDDM to bring your message directly to the community. Boost your reach today to target local marketing!
+                    Every local business deserves to shine! As a trusted small business, we use high-quality printing and EDDM to deliver your message to every door. Start your campaign today!
                 </p>
             </div>
         </section>       
