add template images to home hero

--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
                     Every local business deserves to shine! As a trusted small business, we use high-quality printing and EDDM to deliver your message to every door. Start your campaign today!
                 </p>
             </div>
+            <div class="template-container">
+                <div class="temp">
+                    <img src="images/projects/march25/DC 9x12 Full Card Template_Front.png" alt="eddm temp card front">
+                </div>
+                <div class="temp">
+                    <img src="images/projects/march25/DC 9x12 Full Card Template_Back.png" alt="eddm temp card back">
+                </div>
+                <div class="temp">
+                    <img src="images/projects/march25/support_local_image.png" alt="eddm support local business image">
+                </div>
+                <div class="temp">
+                    <img src="images/projects/march25/sample_card.png" alt="eddm sample card 1">
+                </div>
+                <div class="temp">
+                    <img src="images/projects/march25/print_stack.png" alt="eddm sample card 2">
+                </div>
+            </div>
         </section>       
         <footer>
                 <p>&copy; 2025  All rights reserved.</p>
