--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="script.js" defer></script>
 </head>
 
@@ -61,6 +62,11 @@
                 <div class="temp">
                     <img src="images/projects/march25/print_stack.png" alt="eddm sample card 2">
                 </div>
+            </div>
+            <div class="social-links">
+                <a href="https://www.facebook.com/profile.php?id=61572468187655" target="_blank" rel="noopener noreferrer" class="social-link facebook">
+                    <i class="fab fa-facebook"></i> Follow us on Facebook
+                </a>
             </div>
         </section>       
         <footer>
