add animation spotlight pulse

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="home-hero">
             <div class="content-container">
                 <div class="city-bg-image">
-                    <a href="index-cards.html"><img class="profile-picture" src="images/spotlightLogoBlack.png" alt="logo image" width="100%" height="auto"></a>
+                    <a href="index-cards.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
                 </div>
                 <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
                 <h2>Shining a Light on Your Local Business</h2>
