multiple changes to design

--- a/contact-form.html
+++ b/contact-form.html
@@ -24,14 +24,14 @@
 </head>
 
 <body>
-    <div class="main-container contact">
+    <div class="main-container open-up contact-bg">
         <!-- <div class="background-image"></div> -->
-        <header class="main-title">
+        <header class="pad-small">
             <a href="index.html">
                 <h1>The Brilliant Spotlight</h1>
             </a>
         </header>
-        <div class="section-container form">
+        <div class="section-container form open-up pad-contact">
             <div class="contact-section">
                 <!-- <h2>CONTACT US</h2> -->
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiKHcPzvItVd_3sXz8ITZhOVJTC4IQbxb_WhEElV-2HutK7w/viewform?embedded=true" width="640" height="1644" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -46,8 +46,9 @@
                 </a>
             </div>
         </div>
-        <footer>
-                <p>&copy; 2025  All rights reserved.</p>
+        <footer class="pad-small">
+            <p class="small">&copy; 2025  The Brilliant Spotlight. All rights reserved.</p>
+            <p class="smaller">Let us illuminate your business!</p>
         </footer> 
     </div>
 </body>
