--- a/index-cards.html
+++ b/index-cards.html
@@ -23,9 +23,8 @@
 </head>
 
 <body>
-    <div class="main-container cards-bg">
-        <div class="background-image"></div>
-        <header class="main-title">
+    <div class="main-container cards-bg open-up">
+        <header class="pad-small">
             <a href="index.html">
                 <h1>The Brilliant Spotlight</h1>
             </a>
@@ -47,8 +46,9 @@
                 <!-- Modal content will be injected here by JavaScript -->
             </div>
         </div>
-        <footer>
-                <p>&copy; 2025  All rights reserved.</p>
+        <footer class="pad-small">
+            <p>&copy; 2025  The Brilliant Spotlight. All rights reserved.</p>
+            <p class="smaller">Let us illuminate your business!</p>
         </footer> 
     </div>
 </body>
