--- a/index.html
+++ b/index.html
@@ -25,27 +25,43 @@
 
 <body>
     <div class="main-container">
-        <header class="main-title">
-            <a href="index.html">
-                <h1>The Brilliant Spotlight</h1>
-            </a>
-        </header>
-        <section class="home-hero">
+        <header class="hero-section-with-glow pad-hero open-up">
             <div class="content-container">
                 <div class="city-bg-image">
                     <a href="index-cards.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
                 </div>
-                <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
-                <h2>Shining a Light on Your Local Business</h2>
-                
+                <div class="pad-main-title" >
+                    <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
+                    <a href="index.html">
+                        <h1>The Brilliant Spotlight</h1>
+                    </a>
+                        <h2 class="small">Shining a Light on Your Local Business</h2>
+                </div>
+            </div>
+        </header>
+        <section class="cta pad-basic">
+            <div class="content-container">
+                <h2>Every local business deserves to shine!</h2>
                 <p>
-                    Every local business deserves to shine! As a trusted small business, we use high-quality printing and EDDM to deliver your message to every door. Start your campaign today!
+                    As a trusted small business, we use high-quality printing and EDDM (Every Door Direct Mail) to deliver your message directly to every door. Let us help you reach your community and grow your presence.
                 </p>
+                <div class="custom-card-container">
+                    <div class="custom-card">
+                        <h3>High-Quality Printing</h3>
+                        <p>Vibrant colors and durable materials that make your message stand out.</p>
+                    </div>
+                    <div class="custom-card">
+                        <h3>Targeted EDDM Campaigns</h3>
+                        <p>Reach every household in your  neighborhood effectively.</p>
+                    </div>
+                </div>
                 <div class="current-campaign create">
                     <a class="site-button" href="contact-form.html">Start your Campaign </a>
                     <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
                 </div>
             </div>
+        </section>
+        <section class="pad-basic pad-btm-less">
             <div class="template-container">
                 <div class="temp">
                     <img src="images/projects/march25/DC 9x12 Full Card Template_Front.png" alt="eddm temp card front">
@@ -69,8 +85,9 @@
                 </a>
             </div>
         </section>       
-        <footer>
-                <p>&copy; 2025  All rights reserved.</p>
+        <footer class="pad-small">
+                <p>&copy; 2025  The Brilliant Spotlight. All rights reserved.</p>
+                <p class="smaller">Let us illuminate your business!</p>
         </footer> 
     </div>
 </body>
