edit text sizing

--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
                     <a href="index.html">
                         <h1>The Brilliant Spotlight</h1>
                     </a>
-                        <h2 class="small">Shining a Light on Your Local Business</h2>
+                        <h2 class="slogan">Shining a Light on Your Local Business</h2>
                 </div>
             </div>
         </header>
         <section class="cta pad-basic">
             <div class="content-container">
-                <h2>Every local business deserves to shine!</h2>
-                <p>
+                <h2 class="med">Every local business deserves to shine!</h2>
+                <p class="cta-desc">
                     As a trusted small business, we use high-quality printing and EDDM (Every Door Direct Mail) to deliver your message directly to every door. Let us help you reach your community and grow your presence.
                 </p>
                 <div class="custom-card-container">
                     <div class="custom-card">
                         <h3>High-Quality Printing</h3>
-                        <p>Vibrant colors and durable materials that make your message stand out.</p>
+                        <p class="cta-small">Vibrant colors and durable materials that make your message stand out.</p>
                     </div>
                     <div class="custom-card">
                         <h3>Targeted EDDM Campaigns</h3>
-                        <p>Reach every household in your  neighborhood effectively.</p>
+                        <p class="cta-small">Reach every household in your  neighborhood effectively.</p>
                     </div>
                 </div>
                 <div class="current-campaign create">
