modify text parameters

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </section>
-        <section class="pad-basic pad-btm-less">
+        <section class="pad-basic pad-sample-proj">
             <div class="template-container">
                 <div class="temp">
                     <img src="images/projects/march25/DC 9x12 Full Card Template_Front.png" alt="eddm temp card front">
