--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="custom-card-container">
                     <div class="custom-card">
                         <h3>High-Quality Printing</h3>
-                        <p class="cta-small">Vibrant colors and durable materials that make your message stand out.</p>
+                        <p class="cta-small">Vibrant colors and durable materials make your message stand out.</p>
                     </div>
                     <div class="custom-card">
                         <h3>Targeted EDDM Campaigns</h3>
