--- a/index-cards.html
+++ b/index-cards.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <div class="main-container cards-bg open-up">
+    <div class="main-container cards-bg open-up section-with-glow">
         <header class="pad-small">
             <a href="index.html">
                 <h1>The Brilliant Spotlight</h1>
