edit hero bg color

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="current-campaign create">
-                    <a class="site-button" href="contact-form.html">Start your Campaign </a>
+                    <a class="site-button campaign-btn" href="contact-form.html">Start your Campaign </a>
                     <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
                 </div>
             </div>
