disable user scalability

--- a/contact-form.html
+++ b/contact-form.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="The Brilliant Spotlight" />
     <meta property="og:description" content="The Brilliant Spotlight offers affordable EDDM marketing—design, print, and delivery to targeted local audiences. Stand out and grow your business!" />
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_Image_canvaSurprise.png" />
