--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="Shine with The Brilliant Spotlight" />
     <meta property="og:description" content="Trust The Brilliant Spotlight for affordable EDDM—design, print, and deliver to your local area. Stand out today!" />
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_Image_canvaSurprise.png" />
