--- a/index-cards.html
+++ b/index-cards.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="Deals & Quality Service Spotlight" />
     <meta property="og:description" content="Boost your local reach with Every Door Direct Mail! Affordable, targeted print ads designed to put your business in the spotlight and drive results" />
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/og_CHECK%20OUT%20THIS_yellow.png" />
