add title to post card page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <header class="hero-section-with-glow pad-hero open-up">
             <div class="content-container">
                 <div class="city-bg-image">
-                    <a href="index-cards.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
+                    <a href="index-postcards.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
                 </div>
                 <div class="pad-main-title" >
                     <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="current-campaign create">
                     <a class="site-button campaign-btn" href="contact-form.html">Start your Campaign </a>
-                    <a class="site-button campaign top-mar-small hide" href="index-cards.html">Current Campaign</a>
+                    <a class="site-button campaign top-mar-small hide" href="index-postcards.html">Current Campaign</a>
                 </div>
             </div>
         </section>
