--- a/index-postcards.html
+++ b/index-postcards.html
@@ -30,6 +30,7 @@
             </a>
         </header>
         <div class="section-container">
+            <h2 class="carousel-title">Featured Local Businesses</h2>
                 <div class="carousel-container">
                     <div class="carousel-wrapper">
                         <button class="carousel-btn left">&#10094;</button> <!-- Left Arrow -->
