add card title and cta btn bg color

--- a/index-postcards.html
+++ b/index-postcards.html
@@ -33,11 +33,12 @@
             <h2 class="carousel-title">Featured Local Businesses</h2>
                 <div class="carousel-container">
                     <div class="carousel-wrapper">
-                        <button class="carousel-btn left">&#10094;</button> <!-- Left Arrow -->
+                        <button class="carousel-btn left" aria-label="Previous card">&#10094;</button> <!-- Left Arrow -->
                         <div class="carousel"> <!-- Existing Carousel --> </div>
-                        <button class="carousel-btn right">&#10095;</button> <!-- Right Arrow -->
-                    </div>
-                    <div class="carousel">
+                        <button class="carousel-btn right" aria-label="Next card">&#10095;</button> <!-- Right Arrow -->
+                        <div class="cta-btn-container">
+                        <a href="/contact-form.html" class="cta-button">Want Your Business Featured?</a>
+                        </div>
                     </div>
                 </div>
         </div>
@@ -49,7 +50,7 @@
         </div>
         <footer class="pad-small">
             <p>&copy; 2025  The Brilliant Spotlight. All rights reserved.</p>
-            <p class="smaller">Let us illuminate your business!</p>
+            <!-- <p class="smaller">Let us illuminate your business!</p> -->
         </footer> 
     </div>
 </body>
