edit modal btn close and promotion phrase

--- a/index-postcards.html
+++ b/index-postcards.html
@@ -37,7 +37,7 @@
                         <div class="carousel"> <!-- Existing Carousel --> </div>
                         <button class="carousel-btn right" aria-label="Next card">&#10095;</button> <!-- Right Arrow -->
                         <div class="cta-btn-container">
-                        <a href="/contact-form.html" class="cta-button">Want Your Business Featured?</a>
+                        <a href="/contact-form.html" class="cta-button">Want Your Business Promoted?</a>
                         </div>
                     </div>
                 </div>
