add go to top button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                 <p class="smaller">Let us illuminate your business!</p>
         </footer> 
     </div>
+    <button id="backToTop" aria-label="Back to top">↑</button>
 </body>
 
 </html>
