Initial working version with backend

--- a/index-postcards.html
+++ b/index-postcards.html
@@ -53,6 +53,7 @@
             <!-- <p class="smaller">Let us illuminate your business!</p> -->
         </footer> 
     </div>
+    <button id="backToTop" style="display: none;">Back to Top</button>
 </body>
 
 </html>
