--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="script.js" defer></script>
+        <script>
+        // Folder-based path for campaigns.json and dropdown (always needed)
+        window.DATA_BASE_PATH = '/data/2025/08/campaign_1';
+        // Optional full hardcoded businesses JSON path to override dynamic loading
+        // Comment out or remove if you want dynamic campaign/businesses loading
+        //   window.FULL_DATA_BASE_PATH = '/data/2025/08/campaign_1/businesses-August2025_North_Austin.json';
+    </script>
 </head>
 
 <body>
@@ -35,7 +41,7 @@
                     <a href="index.html">
                         <h1>The Brilliant Spotlight</h1>
                     </a>
-                        <h2 class="slogan">Shining a Light on Your Local Business</h2>
+                    <h2 class="slogan">Shining a Light on Your Local Business</h2>
                 </div>
             </div>
         </header>
@@ -86,11 +92,12 @@
             </div>
         </section>       
         <footer class="pad-small">
-                <p>&copy; 2025  The Brilliant Spotlight. All rights reserved.</p>
-                <p class="smaller">Let us illuminate your business!</p>
+            <p>&copy; 2025  The Brilliant Spotlight. All rights reserved.</p>
+            <p class="smaller">Let us illuminate your business!</p>
         </footer> 
     </div>
     <button id="backToTop" aria-label="Back to top">↑</button>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
