connect archive datbase to live site current campaign

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script>
         // Folder-based path for campaigns.json and dropdown (always needed)
-        window.DATA_BASE_PATH = '/data/2025/08/campaign_1';
+        // window.DATA_BASE_PATH = '/data/2025/08/campaign_1';
         // Optional full hardcoded businesses JSON path to override dynamic loading
         // Comment out or remove if you want dynamic campaign/businesses loading
         //   window.FULL_DATA_BASE_PATH = '/data/2025/08/campaign_1/businesses-August2025_North_Austin.json';
@@ -34,7 +34,7 @@
         <header class="hero-section-with-glow pad-hero open-up">
             <div class="content-container">
                 <div class="city-bg-image">
-                    <a href="index-postcards.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
+                    <a href="campaigns/2025/Austin/September/index-postcards_austin_september_25.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
                 </div>
                 <div class="pad-main-title" >
                     <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
