--- a/index-postcards.html
+++ b/index-postcards.html
@@ -19,7 +19,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <script>
+        // Folder-based path for campaigns.json and dropdown (always needed)
+            // window.DATA_BASE_PATH = '/data/2025/08/campaign_1';
+        // Optional full hardcoded businesses JSON path to override dynamic loading
+        // Comment out or remove if you want dynamic campaign/businesses loading
+            //   window.FULL_DATA_BASE_PATH = '/data/2025/08/campaign_1/businesses-September2025_Austin.json';
+    </script>
 </head>
 
 <body>
@@ -47,16 +53,16 @@
                     </div>
                 </div>
             </div>
-                <div class="carousel-container">
-                    <div class="carousel-wrapper">
-                        <button class="carousel-btn left" aria-label="Previous card">&#10094;</button> <!-- Left Arrow -->
-                        <div class="carousel"> <!-- Existing Carousel --> </div>
-                        <button class="carousel-btn right" aria-label="Next card">&#10095;</button> <!-- Right Arrow -->
-                        <div class="cta-btn-container">
+            <div class="carousel-container">
+                <div class="carousel-wrapper">
+                    <button class="carousel-btn left" aria-label="Previous card">&#10094;</button> <!-- Left Arrow -->
+                    <div class="carousel"> <!-- Existing Carousel --> </div>
+                    <button class="carousel-btn right" aria-label="Next card">&#10095;</button> <!-- Right Arrow -->
+                    <div class="cta-btn-container">
                         <a href="/contact-form.html" class="cta-button">Want Your Business Promoted?</a>
-                        </div>
                     </div>
                 </div>
+            </div>
         </div>
         <div class="modal">
             <button type="button" class="btn-close" aria-label="Close">&times;</button>
@@ -70,6 +76,7 @@
         </footer> 
     </div>
     <button id="backToTop" style="display: none;">Back to Top</button>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
