--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/dctoo42me/the_brilliant_spotlight/refs/heads/main/images/TheBrilliantSpotlight_OG_Image_canvaSurprise.png" />
     <meta property="og:image:alt" content="The Brilliant Spotlight" />
     <link rel="icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon_32x32.png" sizes="32x32" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon_76x76.png" sizes="76x76" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon_144x144.png" sizes="144x144" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon_228x228.png" sizes="228x228" type="image/x-icon">
-    <link rel="apple-touch-icon" href="images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png">
+    <link rel="shortcut icon" href="/images/favicon_32x32.png" sizes="32x32" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon_76x76.png" sizes="76x76" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon_144x144.png" sizes="144x144" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon_228x228.png" sizes="228x228" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/images/TheBrilliantSpotlight_Logo_Yellow_Bright_Large.png">
     <title>The Brilliant Spotlight</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
