refactor to modular front end code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="hero-section-with-glow pad-hero open-up">
             <div class="content-container">
                 <div class="city-bg-image">
-                    <a href="campaigns/2025/september/austin/index-postcards_austin_september_25.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
+                    <a href="index-postcards.html"><img class="spotlight-logo" src="images/spotlightLogoBlack.png" alt="Spotlight Logo" width="100%" height="auto"></a>
                 </div>
                 <div class="pad-main-title" >
                     <a class="rawpixel" href="http://www.freepik.com">Designed by rawpixel.com / Freepik</a>
@@ -97,7 +97,14 @@
         </footer> 
     </div>
     <button id="backToTop" aria-label="Back to top">↑</button>
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
+     <!-- Modular JS Structure -->
+    <script src="js/core.js"></script>
+    <script src="js/data-loader.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/interactions.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
