--- a/index-postcards.html
+++ b/index-postcards.html
@@ -19,12 +19,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+
     <script>
         // Folder-based path for campaigns.json and dropdown (always needed)
-            // window.DATA_BASE_PATH = '/data/2025/08/campaign_1';
+            // window.DATA_BASE_PATH = '/data/2025/august/campaign_1';
         // Optional full hardcoded businesses JSON path to override dynamic loading
         // Comment out or remove if you want dynamic campaign/businesses loading
-            //   window.FULL_DATA_BASE_PATH = '/data/2025/08/campaign_1/businesses-September2025_Austin.json';
+            // window.FULL_DATA_BASE_PATH = '/data/2025/august/campaign_1/businesses-September2025_Austin.json';
     </script>
 </head>
 
@@ -76,7 +78,16 @@
         </footer> 
     </div>
     <button id="backToTop" style="display: none;">Back to Top</button>
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
+     <!-- Modular JS Structure -->
+    <script src="js/core.js"></script>
+    <script src="js/data-loader.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/interactions.js"></script>
+    <script src="js/main.js"></script>
+    <!-- 🔳 Modal Container -->
+
 </body>
 
 </html>
